# ndustria

./: README.md  ndustria_setup.py  pyproject.toml
.github/workflows/: docs_sphinx.yml
docs/source/: conf.py  index.rst  installation.rst  notes.rst  reference.rst  shell_commands.rst  tutorials.rst
docs/source/tutorials/: iterations_test.rst  pipeline_kwargs.rst  rerun_test.rst  simple_example.rst
ndustria/: Logger.py  __init__.py
src/: Cache.py  Task.py
tutorials/: iterations_test.py  package_test.py  pipeline_kwargs.py  rerun_test.py  simple_example.py
