[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ndustria"
version = "2026.0.0"
description = "Streamlined data processing and visualization for large-scale simulations."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Mackenzie Ticoras", email = "scottm59@msu.edu"}]
dependencies = [
    "numpy",
    "tabulate", 
    "line_profiler",
    "mpi4py",
    "openmpi",
    "matplotlib",
] 
requires-python = ">=3.8"

[project.optional-dependencies]
docs = [
  "sphinx>=5.0",
  "sphinx-rtd-theme",
  "myst-parser",
  "sphinx-autodoc-typehints",
  "sphinx-autobuild",
]

[project.scripts]
ndustria-init = "ndustria.ndustria_setup:main"